<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">武进旅游</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="webnetpath">http://112.21.190.22/</string>
    <string name="mlwujin">魅力武进</string>
    <string name="wzwujin">玩转武进</string>
    <string name="yxwujin">印象武进</string>
    <string name="mydh">我的导航</string>
    <string name="dh">导航</string>
    <string name="set">设置</string>
    <string name="help">帮助</string>
    <string name="travel_spot">景点</string>
    <string name="travel_eat">美食</string>
    <string name="travel_hottel">酒店</string>
    <string name="travel_activity">娱乐</string>
    <string name="travel_shop">购物</string>
    <string name="travel_tc">特产</string>
    <string name="travel_gl">交通</string>
    <string name="qkhc">清空缓存</string>
    <string name="tjyy">推荐应用</string>
    <string name="gywm">关于我们</string>
    <string name="jcgx">检查更新</string>
    <string name="gwpf">给我评分</string>
    <string name="syfk">使用反馈</string>
    <string name="cydh">常用电话</string>
    <string name="sybz">使用帮助</string>
    <string name="xxg">掌上嬉戏</string>
    <string name="thw">太湖湾</string>
    <string name="hbh">花博会</string> 
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time"></string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="gsxq">\n\n&#160;&#160;&#160;&#160;太湖，古称震泽，又名五湖，为我国第三大淡水湖，号称三万六千顷。这里山水相依，层次丰富，形成了一幅“山外青山湖外湖，黛峰簇簇洞泉布”的自然画卷。\n
          &#160;&#160;&#160;&#160;太湖湾地区以低山丘陵为主，山脉来自浙江天目山，余脉由宜兴入湖，低山丘陵占土地总面积的66%。该地区大气环境达到国家一级标准，植物生长茂盛，植被良好，共有乔木、灌木、草木植物百余种，鸟类70多种，鱼类30多种。共有山头19座、山坞11个，大小水库8个，湖岸线长约7公里，临湖有7个山湾，由东向西依次为雪堰镇的小城湾、潭底湾，潘家镇的百渎东湾、百渎西湾、凤凰（绿豆）山山湾、庙堂山山湾、百渎永丰（十八步山）湾。该地区景观可概括为“山不高而清秀，水不深而旷远”，湖山结合近乎完美，坐北朝南，平山远水，风景秀丽，是一块不可多得的风水宝地。    
        </string>
    

</resources>